@@ -4,6 +4,7 @@ import static java.lang.Math.round;
 
 import static com.hartwig.hmftools.lilac.ReferenceData.GENE_CACHE;
 
+import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -21,9 +22,11 @@ public final class ComplexCoverage implements Comparable<ComplexCoverage>
     private final List<AlleleCoverage> mAlleleCoverage;
 
     // computed values
+    private double mCohortFrequencyPenalty;
     private double mCohortFrequencyTotal;
     private double mScore;
     private double mComplexityPenalty;
+    private int mComplexity;
     private final int mHomozygousCount;
     private int mRecoveredCount;
     private int mWildcardCount;
@@ -43,6 +46,8 @@ public final class ComplexCoverage implements Comparable<ComplexCoverage>
         mCohortFrequencyTotal = 0;
         mScore = 0;
         mComplexityPenalty = 0;
+        mComplexity = 0;
+        mCohortFrequencyPenalty = 0;
     }
 
     public List<AlleleCoverage> getAlleleCoverage() { return mAlleleCoverage; }
@@ -67,6 +72,10 @@ public final class ComplexCoverage implements Comparable<ComplexCoverage>
 
     private int calcHomozygousCount()
     {
+        // for unit tests
+        if(GENE_CACHE == null)
+            return 0;
+
         return GENE_CACHE.ExpectAlleleCount - getAlleles().size();
     }
 
@@ -79,6 +88,10 @@ public final class ComplexCoverage implements Comparable<ComplexCoverage>
     public double getScore() { return mScore; }
     public void setComplexityPenalty(double complexityPenalty) { mComplexityPenalty = complexityPenalty; }
     public double getComplexityPenalty() { return mComplexityPenalty; }
+    public void setComplexity(int complexity) { mComplexity = complexity; }
+    public int getComplexity() { return mComplexity; }
+    public void setCohortFrequencyPenalty(double cohortFrequencyPenalty) { mCohortFrequencyPenalty = cohortFrequencyPenalty; }
+    public double getCohortFrequencyPenalty() { return mCohortFrequencyPenalty; }
 
     public void expandToSixAlleles()
     {
@@ -87,7 +100,7 @@ public final class ComplexCoverage implements Comparable<ComplexCoverage>
 
         // split homozygous allele coverage, and fill any missing allele if there was zero support
 
-        List<AlleleCoverage> existingCoverage = mAlleleCoverage.stream().collect(Collectors.toList());
+        List<AlleleCoverage> existingCoverage = mAlleleCoverage.stream().toList();
         mAlleleCoverage.clear();
 
         for(String gene : GENE_CACHE.GeneIds)
@@ -128,13 +141,13 @@ public final class ComplexCoverage implements Comparable<ComplexCoverage>
         return newCoverage;
     }
 
-    public void populateMissingCoverage(final List<HlaAllele> alleles)
+    public void populateMissingCoverage(final Iterable<HlaAllele> alleles)
     {
         if(mAlleleCoverage.size() == GENE_CACHE.ExpectAlleleCount)
             return;
 
         // fill any missing allele if there was zero support
-        List<AlleleCoverage> existingCoverage = mAlleleCoverage.stream().collect(Collectors.toList());
+        List<AlleleCoverage> existingCoverage = mAlleleCoverage.stream().toList();
         mAlleleCoverage.clear();
 
         for(HlaAllele allele : alleles)
@@ -170,7 +183,7 @@ public final class ComplexCoverage implements Comparable<ComplexCoverage>
         return 0;
     }
 
-    public static ComplexCoverage create(final List<AlleleCoverage> alleles)
+    public static ComplexCoverage create(final Iterable<AlleleCoverage> alleles)
     {
         int unique = 0;
         double shared = 0.0;
@@ -182,7 +195,7 @@ public final class ComplexCoverage implements Comparable<ComplexCoverage>
             wild += coverage.WildCoverage;
         }
 
-        final List<AlleleCoverage> sortedAlleles = alleles.stream().collect(Collectors.toList());
+        final List<AlleleCoverage> sortedAlleles = Lists.newArrayList(alleles);
         Collections.sort(sortedAlleles, new AlleleCoverage.AlleleSorter());
 
         return new ComplexCoverage(unique, (int) round(shared), (int) round(wild), sortedAlleles);
